src/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
 
@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;
 
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
 
    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;
 
    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;
 
    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;
 
    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;
 
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;
 
    --radius: 0.5rem;
  }
 
  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;
 
    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;
 
    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;
 
    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;
 
    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;
 
    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;
 
    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;
 
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;
 
    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 212.7 26.8% 83.9%;
  }
}
 
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

.h3-bold {
  @apply text-[24px] font-bold leading-[140%] tracking-tighter;
}

@layer utilities {
  .select-image-mask {
    @apply absolute flex items-center justify-center opacity-0 hover:opacity-80 w-full h-full bg-black rounded-full;
  }

  .not-full-screen {
    @apply max-w-[calc(100vw-3rem-6px)] h-fit w-[600px];
  }

  .full-screen {
    @apply max-w-[100vw] max-h-[100vh] w-[100vw] h-[100vh];
  }

  .dialog {
    @apply rounded-none lg:rounded-lg min-h-[55px] full-screen lg:not-full-screen;
  }

  .dialog-content {
    @apply overflow-auto full-screen rounded-none lg:not-full-screen lg:rounded-lg relative bg-white;
  }

  .Dialog::backdrop {
    @apply bg-black opacity-50;
  }

  .profile-image {
    @apply size-[40px] rounded-full aspect-square;
  }

  .post-list {
    @apply flex flex-col divide-y-[1px] divide-[#eff3f4]
  }
}

@layer components {
  .black-icon-button {
    @apply rounded-full;
    background-color: rgba(0, 0, 0, 0.5);
  }

  .black-icon-button svg {
    color: white;
  }

  .black-icon-button:hover {
    background-color: rgba(0, 0, 0, 0.4);
  }

  .round-button {
    @apply flex items-center justify-center rounded-full;
  }

  .input:empty:before {
    content: attr(placeholder);
    opacity: 0.6;
  }

  .icon-button * {
    @apply text-[inherit];
    font-size: inherit;
  }
  
  .icon-button svg {
    height: 1em;
    width: 1em;
    max-height: 1em;
    max-width: 1em;
    min-height: 1em;
    min-width: 1em;
  }

  .icon-button > .icon-bg {
    transform: translate(-50%, -50%);
  }

  .sticky-bar {
    background-color: rgba(255, 255, 255, 0.9);
    @apply sticky backdrop-blur-md;
  }

  .preview-text-box {
    @apply whitespace-pre-wrap line-clamp-[10]
  }

  .block-list {
    @apply block;
  }

  .block-list>*:nth-child(n) {
    @apply ml-4;
  }

  .block-list>*:first-child {
    @apply ml-0;
  }
}


:root {
  overflow-y: scroll;
}

